--- a/views/layout.haml
+++ b/views/layout.haml
@@ -7,13 +7,22 @@
     %meta{'http-equiv': 'Content-Style-Type', 'content': 'text/css'}
     %meta{'http-equiv': 'Content-Script-Type', 'content': 'text/javascript'}
     %title== #{t.makes_your_html_surce_beautifully_indneted.tr("<br>", "")} - Ham Cutlet
-    %link{rel: 'shortcut icon', href: '/favicon.ico'}
     %link{href: "/assets/stylesheets/application.css", rel: 'stylesheet', type: 'text/css'}
     %link{href: "//maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css", rel: 'stylesheet', type: 'text/css'}
     %link{href: "//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.7.0/styles/default.min.css", rel: 'stylesheet', type: 'text/css'}
     %script{src: '//ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js', type: 'text/javascript'}
     %script{src: '//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.7.0/highlight.min.js', type: 'text/javascript'}
     %script{src: '/assets/javascripts/application.js', type: 'text/javascript'}
+
+    %link{href: "/favicons/apple-touch-icon.png", rel: "apple-touch-icon", sizes: "180x180"}
+    %link{href: "/favicons/favicon-32x32.png", rel: "icon", sizes: "32x32", type: "image/png"}
+    %link{href: "/favicons/favicon-16x16.png", rel: "icon", sizes: "16x16", type: "image/png"}
+    %link{href: "/favicons/manifest.json", rel: "manifest"}
+    %link{color: "#5bbad5", href: "/favicons/safari-pinned-tab.svg", rel: "mask-icon"}
+    %link{href: "/favicons/favicon.ico", rel: "shortcut icon"}
+    %meta{content: "/favicons/browserconfig.xml", name: "msapplication-config"}
+    %meta{content: "#ffffff", name: "theme-color"}
+
   %body.body
     - if request.query_string.include?('restart') || !flash[:error]
       %header.header
@@ -26,20 +35,20 @@
           %h2.header__sub-title
             = t.makes_your_html_surce_beautifully_indneted
         %section.made-with
-          %a{href: 'http://haml.info/'}
-            %img{alt: 'Haml', src: '/images/haml-logo.png', class: 'made-with__image'}
           .tools
             %ul.tools__items
               %li.tools__item
-                %a{href: 'https://chrome.google.com/extensions/detail/ncaanpedogldlpcdhcjhnncihedgcndc', class: 'tools__item-link'}
+                %a{href: 'https://chrome.google.com/extensions/detail/ncaanpedogldlpcdhcjhnncihedgcndc', class: 'tools__item-link', target: '_blank'}
                   .tools__item-icon
                     %i.fa.fa-chrome
                   %span.tools__item-label Chrome Extension
               %li.tools__item
-                %a{href: 'https://chrome.google.com/extensions/detail/ncaanpedogldlpcdhcjhnncihedgcndc', class: 'tools__item-link'}
+                %a{href: 'https://github.com/fjordllc/hamcutlet', class: 'tools__item-link', target: '_blank'}
                   .tools__item-icon.is-github
                     %i.fa.fa-github
                   %span.tools__item-label repository
+          %a{href: 'http://haml.info/', target: '_blank'}
+            %img{alt: 'Haml', src: '/images/haml-logo.png', class: 'made-with__image'}
         -#
           .header__ad
             - if ENV['RACK_ENV'] == 'production'
@@ -51,7 +60,7 @@
               %script(type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js")
         %small.header__copyright
           Copyright <i class="fa fa-copyright"></i> <a href="http://fjord.jp">FJORD, LLC</a>
-    %main.main{class: flash[:error] ? 'is-error' : ''}
+    %main.main{class: request.query_string.include?('restart') || !flash[:error] ? '' : 'is-error'}
       = yield
     - if ENV['RACK_ENV'] == 'production'
       :javascript
